@@ -1,3 +1,10 @@
+2011-08-08  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Fix use of skeleton computation algorithms in Scribo.
+
+	* scribo/estim/components_features.hh,
+	* scribo/estim/internal/compute_skeleton.hh: Here.
+
 2011-07-01  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	* scribo/text/paragraphs.hh: Adding horizontal separators check in
